// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CustomersSummary with multiple customers correctly 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        3
      </span>
       
      customers
       spending 
      <span>
        $114,195.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add customer
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render CustomersSummary with one customer correctly 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span />
       
      customers
       spending 
      <span>
        $195.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add customer
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render CustomersSummary without customers correctly 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        0
      </span>
       
      customers
       spending 
      <span>
        $0.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add customer
      </Link>
    </div>
  </div>
</div>
`;
